<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationScreen">

    <TextView
        android:id="@+id/registerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="31dp"
        android:text="@string/register"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/usernameET"
        app:layout_constraintStart_toStartOf="@+id/usernameET" />

    <TextView
        android:id="@+id/usernameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="@+id/firstNameTV"
        app:layout_constraintTop_toTopOf="@+id/usernameET" />

    <EditText
        android:id="@+id/usernameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="234dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/usernameTV"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/firstNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:text="First Name"
        app:layout_constraintBaseline_toBaselineOf="@+id/firstNameET"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/firstNameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/usernameET"
        app:layout_constraintTop_toBottomOf="@+id/usernameET" />


    <TextView
        android:id="@+id/lastNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="Last Name"
        app:layout_constraintBaseline_toBaselineOf="@+id/lastNameET"
        app:layout_constraintEnd_toStartOf="@+id/lastNameET" />

    <EditText
        android:id="@+id/lastNameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/firstNameET"
        app:layout_constraintTop_toBottomOf="@+id/firstNameTV" />

    <TextView
        android:id="@+id/emailTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="21dp"
        android:text="Email"
        app:layout_constraintStart_toStartOf="@+id/lastNameTV"
        app:layout_constraintTop_toBottomOf="@+id/lastNameTV" />

    <EditText
        android:id="@+id/EmailET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/lastNameET"
        app:layout_constraintTop_toBottomOf="@+id/lastNameET" />

    <TextView
        android:id="@+id/passwordTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:text="Password"
        app:layout_constraintBaseline_toBaselineOf="@+id/passwordET"
        app:layout_constraintEnd_toStartOf="@+id/passwordET" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/EmailET"
        app:layout_constraintTop_toBottomOf="@+id/EmailET" />

    <Button
        android:id="@+id/registerSignUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="29dp"
        android:text="@string/sign_up"
        app:layout_constraintStart_toStartOf="@+id/passwordET"
        app:layout_constraintTop_toBottomOf="@+id/passwordET" />

</androidx.constraintlayout.widget.ConstraintLayout>